wp-content/themes/flexform-child/css/main.css
/* Fonts */
@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700);

/* General Layout
---------------------*/

/* Crop featured image on single page */
.blog.single figure.media-wrap {
    max-height: 200px;
}

/* Top menu Subscribe link */
#top-bar .menu > li.aux-subscribe > h3 {
    color: #666666;
    font-weight: bold;
    font-size: 1.3em;
    line-height: 1;
    margin: 0;
    padding: 0;
}

/*Social links*/
#top-bar-social > ul {
    margin-top: 10px;
}

/*Drop down*/
#top-bar #header-subscribe {
    min-width: 250px;
}

nav#top-bar-menu .menu > li > ul {
    top: 42px;
}

body.home .alt-bg {
    border: none;
}
body.home .page-heading {
    background-color: #FFF;
    border-bottom-color: none;
    padding-top: 50px;
    padding-bottom: 0;
}

body.home h1 {
    font-family: 'Yanone Kaffeesatz', sans-serif;
    font-size: 60px;
    font-weight: bold;
    line-height: 1.2;
    text-transform: uppercase;
    color: #CCC;
    -webkit-transition: color 1s;
       -moz-transition: color 1s;
            transition: color 1s;
}

body.home h1:hover {
    color: #AAA;
}

/* Portfolio Overlay Text
------------------------------*/
.overlay .thumb-info h4 {
    font-size: 2.5em;
    line-height: 1.2;
}

/* Screen size 1200px MIN
-----------------------------------------------*/
@media only screen and (min-width: 1200px) {
    #nav-section {
        margin-top: 15px !important;
    }
}

/* Screen size 767px MAX
-----------------------------------------------*/
@media only screen and (max-width: 767px) {
    /* Show subscribe menu */
    #top-bar .menu > li.parent::after, nav .menu .sub-menu .parent > a::after {
        display: block;
    }
    
    #top-bar .show-menu {
        width: 100%;
    }
    
    #top-bar .top-menu .menu {
        width: 100% !important;
    }
    
    .parent.aux-subscribe a {
        display: none;
    }
    
    nav .menu ul, nav#top-bar-menu .menu > li > ul {
        border-top: none;
    }
    
    .page-heading.alt-bg {
        width: 110%!important;
        margin-left: -5%!important;
    }
}


/* Screen size 768px to 979px
-----------------------------------------------*/
@media (min-width: 768px) and (max-width: 979px) {
    
}

/* Screen size 980px MIN
-----------------------------------------------*/
@media (min-width: 600px) {
    
    /* Portfolio Single post
    --------------------------*/
    .portfolio.single figure.media-wrap {
        width: 45%;
        margin-right: 5%;
        margin-bottom: 60px;
        float: left;
    }
    .portfolio.single article {
        width: 50%;
        float: left;
    }
    
    .portfolio.single .page-content {
        width: 100%;
    }
}

